--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,13 +1,26 @@
 ---
-title: Hello World
-description: Your first document
+title: Introduction
+description: Ready-made Tailwind CSS components for rapid UI development.
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
+**Mameen UI** is a collection of ready-made UI components built exclusively with Tailwind CSS, designed to help you rapidly prototype and build modern web interfaces.
 
-## What is Next?
+Unlike traditional component libraries, **Mameen UI** components are not installed as dependencies via npm or any other package manager. 
 
-<Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
-</Cards>
+Instead, **you copy and paste** the HTML and corresponding Tailwind classes directly into your project, giving you complete control over the code and allowing you to customize it to perfectly match your design.
+
+## Watch the Tutorial
+
+To get started with **Mameen UI**, watch the following tutorial video:
+
+<iframe width="460" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
+
+## FAQ
+
+### What frameworks are supported?
+
+Mameen UI is designed to work with any framework (or even plain HTML) as long as you have Tailwind CSS set up in your project. Because you're copying and pasting the HTML and Tailwind classes directly, there are no framework-specific dependencies.
+
+### What are the dependencies?
+
+Mameen UI itself has no dependencies. It relies solely on Tailwind CSS. You'll need to have Tailwind configured in your project for the components to render correctly.
