mdx_docs: badges & buttons

--- a/content/docs/Components/buttons.mdx
+++ b/content/docs/Components/buttons.mdx
@@ -1,17 +1,44 @@
 ---
 title: Buttons
+description: A collection of stylish and customizable buttons for your site.
+preview: buttons
 ---
 
-## Default button
-Use these default button styles with multiple colors to indicate an action or link within your website.
+import ButtonPreview from "@/components/previews/button.tsx";
+import { ButtonOutline } from "@/components/previews/button.tsx";
 
-```js
-lorem ipsum dolor
+## Default Button
+
+Use these buttons to enhance user interaction and improve UI consistency.
+
+
+<ButtonPreview />
+
+```html
+<button class="bg-blue-700 text-xs text-white font-semibold py-1.5 px-6 rounded-md hover:bg-blue-900 transition duration-300 ease-out">Default</button>
+<button class="bg-blue-700 text-sm text-white font-semibold py-1.5 px-6 rounded-md hover:bg-blue-900 transition duration-300 ease-out">Default</button>
+<button class="bg-blue-700 text-base text-white font-semibold py-1.5 px-6 rounded-md hover:bg-blue-900 transition duration-300 ease-out">Default</button>
+<button class="bg-blue-700 text-lg text-white font-semibold py-1.5 px-6 rounded-md hover:bg-blue-900 transition duration-300 ease-out">Default</button>
+<button class="bg-blue-700 text-2xl text-white font-semibold py-1.5 px-6 rounded-md hover:bg-blue-900 transition duration-300 ease-out">Default</button>
 ```
 
-## test
+## Outline Button
 
-<Cards>
-  <Card title="tset" href="#" />
-  <Card title="test" href="#" />
-</Cards>
+A button with a transparent background and a visible border.
+
+<ButtonOutline />
+
+```html
+<button class="border border-zinc-200 text-xs text-black font-semibold py-2 px-6 rounded-md hover:bg-zinc-200 transition duration-300 ease-out cursor-pointer dark:border-zinc-600 dark:text-white dark:hover:bg-zinc-600">Outline</button>
+<button class="border border-zinc-200 text-sm text-black font-semibold py-2 px-6 rounded-md hover:bg-zinc-200 transition duration-300 ease-out cursor-pointer dark:border-zinc-600 dark:text-white dark:hover:bg-zinc-600">Outline</button>
+<button class="border border-zinc-200 text-base text-black font-semibold py-2 px-6 rounded-md hover:bg-zinc-200 transition duration-300 ease-out cursor-pointer dark:border-zinc-600 dark:text-white dark:hover:bg-zinc-600">Outline</button>
+<button class="border border-zinc-200 text-lg text-black font-semibold py-2 px-6 rounded-md hover:bg-zinc-200 transition duration-300 ease-out cursor-pointer dark:border-zinc-600 dark:text-white dark:hover:bg-zinc-600">Outline</button>
+<button class="border border-zinc-200 text-xl text-black font-semibold py-2 px-6 rounded-md hover:bg-zinc-200 transition duration-300 ease-out cursor-pointer dark:border-zinc-600 dark:text-white dark:hover:bg-zinc-600">Outline</button>
+```
+
+
+## 🎉 Credits & Contributors
+
+Special thanks to [mwwlean](https://github.com/mwwlean/), [NPerfei](https://github.com/NPerfei), [angelomahusay](https://github.com/angelomahusay) and [Frnk-Cat](https://github.com/Frnk-Cat) for their incredible contributions to these buttons   !
+
+Your work makes this project better. 🚀
