small changes -> buttons

--- a/content/docs/Components/buttons.mdx
+++ b/content/docs/Components/buttons.mdx
@@ -33,7 +33,7 @@ A button with a transparent background and a visible border.
 <button class="border border-zinc-200 text-sm text-black font-semibold py-2 px-6 rounded-md hover:bg-zinc-200 transition duration-300 ease-out cursor-pointer dark:border-zinc-600 dark:text-white dark:hover:bg-zinc-600">Outline</button>
 <button class="border border-zinc-200 text-base text-black font-semibold py-2 px-6 rounded-md hover:bg-zinc-200 transition duration-300 ease-out cursor-pointer dark:border-zinc-600 dark:text-white dark:hover:bg-zinc-600">Outline</button>
 <button class="border border-zinc-200 text-lg text-black font-semibold py-2 px-6 rounded-md hover:bg-zinc-200 transition duration-300 ease-out cursor-pointer dark:border-zinc-600 dark:text-white dark:hover:bg-zinc-600">Outline</button>
-<button class="border border-zinc-200 text-xl text-black font-semibold py-2 px-6 rounded-md hover:bg-zinc-200 transition duration-300 ease-out cursor-pointer dark:border-zinc-600 dark:text-white dark:hover:bg-zinc-600">Outline</button>
+<button class="border border-zinc-200 text-2xl text-black font-semibold py-2 px-6 rounded-md hover:bg-zinc-200 transition duration-300 ease-out cursor-pointer dark:border-zinc-600 dark:text-white dark:hover:bg-zinc-600">Outline</button>
 ```
 
 
